started work updating to new antimatter version, doesn't compile yet